--- a/app/css/about.css
+++ b/app/css/about.css
@@ -4,11 +4,11 @@
     margin-left: 20px;
     border-bottom: solid 1px rgba(193, 193, 193, 0.56);
 }
-.border {
-	border: solid 1px rgba(193, 193, 193, 0.56);
-	padding: 20px;
-}
 
 .list {
 	font-size: 20px;
+}
+
+.text-align-center {
+	text-align: center;
 }
