Change the admin page UI

--- a/app/css/admin.css
+++ b/app/css/admin.css
@@ -1,3 +1,7 @@
+#automaticTeamFormButton {
+    margin-top: 16px;
+}
+
 md-dialog {
     flex: 80;
 }
@@ -12,4 +16,8 @@ md-dialog table {
 
 md-dialog table .atf {
     color: red;
+}
+
+.padding-left-8 {
+    padding-left: 8px;
 }
