--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,21 @@
 md-content {
     background-color: transparent;
 }
+
+.md-fab {
+    float: right;
+}
+
+.padding-left-8 {
+    padding-left: 8px;
+}
+
+.padding-left-15 {
+    padding-left: 15px;
+}
+
+.md-fab > i {
+    position: relative;
+    top: 6px;
+    left: 1px;
+}
